@@ -112,6 +112,7 @@ STREAM: 2.0
   
   PRs Fixed in this Release
   ================================================================================
+  1GD79XM: ITPJCORE:WINNT - Search - search for field references - not all found
 
   PRs Closed in this Release
   ===============================================================================
